--- a/src/app/shop/templates/header.component.html
+++ b/src/app/shop/templates/header.component.html
@@ -22,7 +22,7 @@
 							<ul class="dropdown-menu">
 								<li class="nav-item"><a class="nav-link" [routerLink]="['/products']">Sản phẩm</a></li>
 								<li class="nav-item"><a class="nav-link" href="category.html">Danh mục</a></li>
-								<li class="nav-item"><a class="nav-link" href="single-product.html">Product Details</a>
+								<li class="nav-item"><a class="nav-link" [routerLink]="['/listorder']">Xem Giỏ Hàng</a>
 								</li>
 								<li class="nav-item"><a class="nav-link" [routerLink]="['/checkout']">Thanh toán sản
 										phẩm</a></li>
