--- a/src/app/shop/templates/header.component.html
+++ b/src/app/shop/templates/header.component.html
@@ -51,8 +51,8 @@
 						<li class="nav-item"><a class="nav-link" href="https://zalo.me/0343689757">Contact</a></li>
 					</ul>
 					<ul class="nav navbar-nav navbar-right">
-						<li class="nav-item"><a [routerLink]="['/listorder']" class="cart"><span
-									class="ti-bag"></span></a></li>
+						<li class="nav-item"><a [routerLink]="['/listorder']" class="fa fa-shopping-cart" style="font-size:30px;color:red"><span
+									></span></a></li>
 						<li class="nav-item">
 							<button class="search"><span class="lnr lnr-magnifier" id="search"></span></button>
 						</li>
