--- a/src/app/shop/templates/login.component.html
+++ b/src/app/shop/templates/login.component.html
@@ -34,35 +34,24 @@
 					<div class="container">
 						<form #formProduct="ngForm" (ngSubmit)="onSubmit(formProduct.value)">
 							<div class="form-group">
-								<label for="name">Name</label>
 								<input ngModel #name="ngModel" required minlength="3" type="text" class="form-control"
 									name="email" placeholder="email">
 
 								<!-- Show validate -->
 								<p *ngIf="name.invalid && (name.dirty || name.touched) && name.errors?.['required']"
-									class="help-block text-danger">Name is required</p>
-
-								<p *ngIf="name.invalid && (name.dirty || name.touched) && name.errors?.['minlength']"
-									class="help-block text-danger">Minlength not valid</p>
+									class="help-block text-danger">Email không được rỗng!</p>
 							</div>
 							<div class="form-group">
-								<label for="price">Price</label>
-								<input ngModel #price="ngModel" required minlength="3" type="text" class="form-control"
+								<input ngModel #price="ngModel" required minlength="3" type="password" class="form-control"
 									name="password" placeholder="password">
 
-								<!-- Show validate -->
-								<!-- Show validate -->
 								<p *ngIf="name.invalid && (price.dirty || price.touched) && price.errors?.['required']"
-									class="help-block text-danger">price is required</p>
-
-								<p *ngIf="price.invalid && (price.dirty || price.touched) && price.errors?.['minlength']"
-									class="help-block text-danger">Minlength not valid</p>
+									class="help-block text-danger">Password không được rỗng!</p>
 							</div>
 							<div class="form-group">
 								<button type="submit" [disabled]="!formProduct.valid" class="btn btn-primary">Đăng
 									Nhập</button>
 							</div>
-
 						</form>
 					</div>
 				</div>
