--- a/src/app/shop/templates/header.component.html
+++ b/src/app/shop/templates/header.component.html
@@ -26,33 +26,23 @@
 								</li>
 								<li class="nav-item"><a class="nav-link" [routerLink]="['/checkout']">Thanh toán sản
 										phẩm</a></li>
-								<li class="nav-item"><a class="nav-link" href="cart.html">Shopping Cart</a></li>
-								<li class="nav-item"><a class="nav-link"
-										[routerLink]="['/order-detail']">Confirmation</a></li>
 							</ul>
 						</li>
+
 						<li class="nav-item submenu dropdown">
 							<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button"
-								aria-haspopup="true" aria-expanded="false">Blog</a>
+								aria-haspopup="true" aria-expanded="false">Setting</a>
 							<ul class="dropdown-menu">
-								<li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
-								<li class="nav-item"><a class="nav-link" href="single-blog.html">Blog Details</a></li>
-							</ul>
-						</li>
-						<li class="nav-item submenu dropdown">
-							<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button"
-								aria-haspopup="true" aria-expanded="false">Pages</a>
-							<ul class="dropdown-menu">
-								<li class="nav-item"><a class="nav-link" [routerLink]="['/login']">Login</a></li>
-								<li class="nav-item"><a class="nav-link" href="tracking.html">Tracking</a></li>
-								<li class="nav-item"><a class="nav-link" href="elements.html">Elements</a></li>
+								<li class="nav-item"><a class="nav-link">Elements</a></li>
+								<li class="nav-item"><a class="nav-link" [routerLink]="['/login']">Đăng Nhập</a></li>
+								<li class="nav-item"><a class="nav-link" [routerLink]="['/register']">Đăng Kí</a></li>
 							</ul>
 						</li>
 						<li class="nav-item"><a class="nav-link" href="https://zalo.me/0343689757">Contact</a></li>
 					</ul>
 					<ul class="nav navbar-nav navbar-right">
-						<li class="nav-item"><a [routerLink]="['/listorder']" class="fa fa-shopping-cart" style="font-size:30px;color:red"><span
-									></span></a></li>
+						<li class="nav-item"><a [routerLink]="['/listorder']" class="fa fa-shopping-cart"
+								style="font-size:30px;color:red"><span></span></a></li>
 						<li class="nav-item">
 							<button class="search"><span class="lnr lnr-magnifier" id="search"></span></button>
 						</li>
@@ -61,6 +51,46 @@
 			</div>
 		</nav>
 	</div>
-
+	<div class="search_input" id="search_input_box">
+		<div class="container">
+			<form class="d-flex justify-content-between">
+				<input class="form-control" type="text" placeholder="Tìm kiếm nhanh" aria-label="Number" matInput
+					(input)="handdleSearch($event)" [matAutocomplete]="auto">
+				<mat-autocomplete #auto="matAutocomplete">
+					<ng-container *ngFor="let product of products ">
+						<a (click)="reloadCurrentPage(product.id)">
+							<mat-option class="search_main" [value]="product.name">
+								<span><img id="search_image" class="search_image" [src]="url+'/public/uploads/'+product.image"
+										[alt]="product.name">
+									{{product.name}}
+									<b class="price_search">{{ product.price | number }}vnd</b></span>
+							</mat-option>
+						</a>
+						<hr>
+					</ng-container>
+				</mat-autocomplete>
+			</form>
+		</div>
+	</div>
+	<!-- <div class="navbar-search search-style-5">
+		<form action="">
+		  <div class="search-input">
+			<input class="form-control" type="text" placeholder="Tìm kiếm nhanh" aria-label="Number"
+			  matInput (input)="handdleSearch($event)" [matAutocomplete]="auto">
+			<mat-autocomplete #auto="matAutocomplete">
+			  <ng-container *ngFor="let product of products ">
+				<a (click)="reloadCurrentPage(product.id)">
+				  <mat-option class="search_main" [value]="product.name">
+					<span><img id="search_image" class="search_image" [src]="url+'public/uploads/'+product.image"
+						[alt]="product.name">
+					  {{product.name}}
+					  <b class="price_search">{{ product.price | number }}vnd</b></span>
+				  </mat-option>
+				</a>
+				<hr>
+			  </ng-container>
+			</mat-autocomplete>
+		  </div>
+		</form>
+	  </div> -->
 </header>
-<!-- End Header Area -->
